k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: sopes3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/tweet
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 3000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 3000
